# Zishu-sensei

./: .commitlintrc.json  .coverage  .editorconfig  .env  .eslintrc.json  .flake8  .gitattributes  .gitignore  .npmrc  .prettierrc  ARCHITECTURE_GAPS_ANALYSIS.md  BUILD_FIX_GUIDE.md  CHANGEKLOG.md  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  TEST_ANALYSIS_REPORT.md  app.py  data  docker-compose.china.yml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  junit_results.xml  model_registry.json  one-click-deploy.sh  package-lock.json  package.json  pyproject.toml  quick-start.sh  quick_fix.sh  requirements.txt  suiji.ipynb  test_mood_diary.py  test_report.json  test_results.json  zishu-sensei.key  (+1 more)
.devcontainer/: README.md  devcontainer.json  test-container.ps1
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: backend-tests.yml  build-desktop.yml  ci.yml  code-quality.yml  deploy.yml  desktop-windows-x86_64.yml  performance.yml  release.yml  reusable-setup.yml  update-check.yml
adapters/zishu-base/: README.md  adapter_config.json  adapter_model.safetensors  metadata.json
assets/live2d_renderer/: live2d_renderer.html
community_platform/: README.md  REFACTOR_SUMMARY.md  deploy.sh  docker-compose.override.yml  docker-compose.yml  env.example  logs.sh  stop.sh  test_create_character.py  test_frontend_registration.html  test_registration.sh
community_platform/backend/: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  build.sh  docker-compose.yml  docker-entrypoint.sh  init.sql  main.py  pytest.ini  requirements.txt
community_platform/docs/: DEVELOPMENT_ROADMAP.md  FRONTEND_ARCHITECTURE.md  FRONTEND_ARCHITECTURE_UPDATED.md
community_platform/frontend/: .editorconfig  .env.backup  .eslintignore  .eslintrc.json  .gitignore  .lighthouserc.js  .lintstagedrc.js  .prettierignore  .prettierrc  .stylelintrc.json  Dockerfile  QUICK_START.md  README.md  README_CI_CD.md  commitlint.config.js  env.example  middleware.ts  next.config.mjs  next.config.ts  package.json  package.json.test-scripts  playwright-performance.config.ts  playwright-visual.config.ts  playwright.config.ts  tailwind.config.js  tailwind.config.ts  test-env.js  tsconfig.json  verify_structure.sh  vitest.config.test.js  vitest.config.ts
community_platform/nginx/: nginx.conf
config/: accelerate_config.json  api_config.json  data_config.json  default.json  default.yml  desktop_config.json  experts_config.json  logging_config.json  memory_config.json  model_config.json  resource_config.json  routing_config.json  security_config.yaml  speech_config.json  training_config.json  vision_config.json
config/character/: default.json  default.yml
config/distillation/: distillation_pipeline.json  expert_integration.json  special_distill.json  teacher_models.json  teachers.json
config/environments/: inference.yml
config/evaluation/: anime_language_eval.json  general_metrics.json
config/integrations/: desktop_config.yml  experts_config.yml  speech_config.yml  vision_config.yml
config/midware/: caching_config.yaml  monitoring_config.yaml  multimodal_config.yaml
config/monitoring/: logging_config.yml  resource_config.yml
config/security/: sandbox_config.json
config/services/: api_config.yml  memory_config.yml  model_config.yml  qdrant.yml  redis.yml  routing_config.yml
config/system/: inference.json
data/train/: calibration.json
desktop_app/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .vite  CONFIGURATION_SYSTEM_SUMMARY.md  README.md  index.html  node_modules  package.json  playwright.config.ts  start-dev.sh  tailwind.config.js  test-suites.md  test_model_registration.sh  tsconfig.check.json  tsconfig.dev.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.config.ts.timestamp-1763378124174-388df5fe49e3c.mjs  vitest.config.ts  vitest.config.ts.timestamp-1761722941616-776a770a9ef2d.mjs  vitest.integration.config.ts
desktop_app/config/: settings.schema.json  voice.json
desktop_app/docs/: API_ROUTING_GUIDE.md  CHARACTER_SYSTEM.md  CHAT_FEATURE_EXAMPLE.md  CHAT_FEATURE_GUIDE.md  CHAT_INTEGRATION.md  CONFIG_SYSTEM.md  DATABASE_MODULE_SUMMARY.md  DATABASE_SYNC_GUIDE.md  (+11 more)
docker/: Dockerfile.api  Dockerfile.api.china  Dockerfile.jupyter  README.md  daemon.json  docker-compose.dev.yml  env.template
docs/: CHAT_USAGE_GUIDE_zh-CN.md  DATABASE_CONNECTION_GUIDE.md  DATA_STORAGE_STRATEGY.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  DOCKER_DEV_GUIDE.md  DOCKER_QUICKSTART.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_DEEP_DIVE_REPORT.md  REDIS_USAGE.md  RUST_BACKEND_TEST_PLAN.md  RUST_BACKEND_TEST_SCHEDULE.md  SCREEN_UNDERSTANDING_DEPS.md  SYSTEM_OVERVIEW.md  TEST_FRAMEWORK_ANALYSIS.md  VSCODE_DOCKER_GUIDE.md  architecture.md  migration_guide.md
evaluation_results/: anime_evaluation_report_20250609_133507.json
examples/: audit_example.py  emotion_middleware_example.py  fastapi_emotion_integration.py  file_adapter_example.py  metrics_integration_example.py  performance_monitoring_example.py  raw_output_chat.py  sandbox_example.py  security_integration_example.py  security_usage_example.py  storage_factory_example.py  vector_search_examples.py
models/: README.md
scripts/: advanced_quantize.py  build.js  check_json.py  clean.sh  create_calibration.py  deploy.sh  dev-docker.ps1  dev-docker.sh  dev-optimized.sh  dev.sh  evaluate.py  extract_adapter.py  health-check.sh  init_qdrant_collections.py  prepare_data.py  register_third_party_adapter.py  run_migrations.sh  run_with_cloud_env.sh  setup-docker-mirrors.sh  setup.sh  setup_cloud_env.sh  setup_cloud_storage.sh  test-all.sh  test_third_party_adapter.sh  train_mistral.py  version.js
tests/: conftest.py  pytest.ini  requirements.txt  run_tests.py
tools/: README.md  cleanup_yaml.py  config_converter.py  download_models.py  download_models_index.py  download_models_mistral.py  download_models_qwen.py
training/: data_config.yml  requirements.txt
zishu/: __init__.py
(+2443 files in other folders)
