[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zishu-sensei"
version = "0.1.0"
description = "AI Desktop Assistant with Adapter Framework"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Zishu-sensei Team", email = "team@zishu-sensei.com"}
]
maintainers = [
    {name = "Zishu-sensei Team", email = "team@zishu-sensei.com"}
]
keywords = ["ai", "desktop", "assistant", "adapter", "anime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.3.0",
    "transformers>=4.41.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.5",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "starlette==0.35.1",
    # 数据库相关依赖
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    # 安全相关依赖
    "werkzeug>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    # 验证和工具
    "email-validator>=2.1.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
training = [
    "peft>=0.8.0",
    "accelerate>=0.29.0",
    "bitsandbytes>=0.42.0",
    "datasets>=2.18.0",
    "auto-gptq>=0.6.0",
]
desktop = [
    "PyQt6>=6.7.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.6",
    "pillow>=10.2.0",
]
vision = [
    "opencv-python>=4.9.0",
    "pytesseract>=0.3.10",
]
speech = [
    "SpeechRecognition>=3.10.0",
    "pyttsx3>=2.90",
    "openai-whisper>=20231117",
]

[project.urls]
Homepage = "https://github.com/zishu-sensei/zishu-sensei"
Documentation = "https://docs.zishu-sensei.com"
Repository = "https://github.com/zishu-sensei/zishu-sensei"
"Bug Tracker" = "https://github.com/zishu-sensei/zishu-sensei/issues"

[project.scripts]
zishu = "zishu.cli:main"
zishu-train = "zishu.training:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zishu*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "system: marks tests as system-level tests",
    "adapter: marks tests as adapter-related tests",
    "adapters: marks tests as adapters system tests", 
    "character: marks tests as character management tests",
    "models: marks tests as model-related tests",
    "model: marks tests as individual model tests",
    "stress: marks tests as stress/performance tests",
    "api: marks tests as API-related tests",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "peft.*",
    "accelerate.*",
]
ignore_missing_imports = true
